themes/dijit.css
/* ... */
.dijitSpinner .dijitInputLayoutContainer .dijitUpArrowButton {
	top: 0;
	bottom: auto;
}

TABLE.dijitComboButton {
	/* In ComboButton, borders are on each cell rather than on <table> itself */
	border-collapse: collapse;
	border:0;
	padding:0;
	margin:0;
}
.dijitToolbar .dijitComboButton {
	/* because Toolbar only draws a border around the hovered thing */
	border-collapse: separate;
}

.dj_ie BUTTON.dijitButtonNode {
	overflow: visible; /* eliminates arbitrary left and right padding on buttons */
}

table .dijitButton .dijitButtonNode,
table .dijitComboButton .dijitButtonNode {
	#overflow:hidden; /* visible messes up if the button is inside a table on IE */
}



.dijitButtonNode IMG {
	/* make text and images line up cleanly */
	vertical-align:middle;
	/*margin-bottom:.2em;*/
}

/******
	TextBox related.
	Everything that has an <input>
*******/

.dijitTextBox,
.dijitComboBox,
.dijitSpinner {
	border: solid black 1px;
	#overflow: hidden; /* #6027, #6067 */
	width: 15em;	/* need to set default size on outer node since inner nodes say <input style="width:100%"> and <td width=100%>.  user can override */
	vertical-align: middle;
	#vertical-align: auto;	
}

.dijitTimeTextBox {
	width: 8em;
}

/* rules for safari to deal with fuzzy blue focus border */
.dijitTextBox input:focus,
.dijitComboBox input:focus,
.dijitSpinner input:focus {
	outline: none;	/* blue fuzzy line looks wrong on combobox or something w/validation icon showing */
}
.dijitTextBoxFocused,
.dijitComboBoxFocused,
.dijitSpinnerFocused, .dijitSpinnerUpArrowActive, .dijitSpinnerDownArrowActive,
.dijitTextAreaFocused {
	/* should we display focus like we do on other browsers, or use the safari standard focus indicator?? */
	outline: auto 5px -webkit-focus-ring-color;
}
.dijitTextAreaFocused div {
	/* prevent dotted border on FF3 */
	outline: none !important;
}

.dijitTextBox INPUT,
.dijitComboBox INPUT,
.dijitSpinner INPUT {
	border-left: solid black 1px;	/* TODO: for RTL mode should be border-right */
	display:inline;
	position:static !important;
	border:0 !important;	
	margin:0 !important;
	vertical-align:top !important;
	visibility:visible !important;
	background-color:transparent !important;
	background-image:none !important;
	width:100% !important;
}

/* Display an "X" for invalid input. Themes will override these rules to display an icon instead.
*/
.dijitValidationIcon {
	visibility: hidden;
	display: block;
	padding: 0 2px;
	float: right;
	height: auto;
}
.dijitValidationIconText {
	visibility: hidden;
	display: none;
	float:right;
	font-family: sans-serif;
	font-style:italic;
	font-size: 0.75em;
	padding-right: 0.15em;
	line-height: 160%;
}
.dijit_a11y .dijitValidationIcon { display: none !important; }
.dijit_a11y .dijitValidationIconText { display: block !important; }

.dijitError .dijitValidationIcon,
.dijitError .dijitValidationIconText {
	visibility: visible;
}

.dijitTextBox .dijitArrowButton {
	/* this is for a combo box with no arrow displayed; we set baseClass=TextBox */
	display:none;
}

/****
		dijit.form.CheckBox
 	 &
  		dijit.form.RadioButton
 ****/

.dijitCheckBox,
.dijitRadio,
.dijitCheckBoxInput {
	padding: 0;
	border: 0;
	width: 16px;
	height: 16px;
	background-position:center center;
	background-repeat:no-repeat;
	overflow: hidden;
}

.dijitCheckBox INPUT,
.dijitRadio INPUT {
	margin: 0;
	padding: 0;
	display: block;
}

.dijitCheckBoxInput {
	/* place the actual input on top, but all-but-invisible */
	opacity: 0.01;
}

.dj_ie .dijitCheckBoxInput {
	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
	filter: alpha(opacity=0);
}

.dijit_a11y .dijitCheckBox,
.dijit_a11y .dijitRadio {
	width: auto;
	height: auto;
}
.dijit_a11y .dijitCheckBoxInput {
	opacity: 1;
	filter: none;
	width: auto;
	height: auto;
}


/****
		dijit.ProgressBar
 ****/

.dijitProgressBarEmpty{
	/* outer container and background of the bar that's not finished yet*/
	position:relative;overflow:hidden;
	border:1px solid black; 	/* a11y: border necessary for high-contrast mode */
	z-index:0;			/* establish a stacking context for this progress bar */
}

.dijitProgressBarFull {
	/* outer container for background of bar that is finished */
	position:absolute;
	overflow:hidden;
	z-index:-1;
	top:0;
	width:100%;
}
.dj_ie6 .dijitProgressBarFull {
	height:1.6em;
}

.dijitProgressBarTile {
	/* inner container for finished portion */
	position:absolute;
	overflow:hidden;
	top:0;
	left:0;
	bottom:0;
	right:0;
	margin:0;
	padding:0;
	width:auto;
	height:auto;
	background-color:#aaa;
	background-attachment: fixed;
}

.dijit_a11y .dijitProgressBarTile{
	/* a11y:  The border provides visibility in high-contrast mode */
	border-width:4px;
	border-style:solid;
	background-color:transparent !important;
}

.dj_ie6 .dijitProgressBarTile {
	/* width:auto works in IE6 with position:static but not position:absolute */
	position:static;
	/* height:auto or 100% does not work in IE6 */
	height:1.6em;
}

.dijitProgressBarIndeterminate .dijitProgressBarLabel {
	visibility:hidden;
}

.dijitProgressBarIndeterminate .dijitProgressBarTile {
	/* animated gif for 'indeterminate' mode */
}

.dijitProgressBarIndeterminateHighContrastImage {
	display:none;
}

.dijit_a11y .dijitProgressBarIndeterminate .dijitProgressBarIndeterminateHighContrastImage {
	display:block;
	position:absolute;
	top:0;
	bottom:0;
	margin:0;
	padding:0;
	width:100%;
	height:auto;
}

.dijitProgressBarLabel {
	display:block;
	position:static;
	width:100%;
	text-align:center;
	background-color:transparent !important;
}

/****
		dijit.Tooltip
 ****/

.dijitTooltip {
	position: absolute;
	z-index: 2000;
	display: block;
	/* make visible but off screen */
	left: 50%;
	top: -10000px;
	overflow: visible;
}

.dijitTooltipContainer {
	border: solid black 2px;
	background: #b8b5b5;
	color: black;
	font-size: small;
}

.dijitTooltipFocusNode {
	padding: 2px 2px 2px 2px;
}

.dijitTooltipConnector {
	position: absolute;
}

.dijitTooltipData {
	display:none;
}
/* ... */

